--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -6,3 +6,762 @@
     min-height: 260px;
     margin-left: 280px;
 }
+ul.posts {
+    list-style-type: none;
+    padding: 0px;
+    margin: 16px 0px 0px 0px;
+    border-top: 1px solid #e0e0e0;
+}
+ul.posts li.post {
+    padding: 8px;
+    border-bottom: 1px solid #e0e0e0;
+}
+ul.posts li.post:hover {
+    background-color: #f0f0f0;
+}
+div.post-date {
+    float: right;
+}
+div.post-author {
+    font-weight: bold;
+}
+div.post-thumbnail {
+    position: absolute;
+}
+div.post-content {
+    margin-left: 48px;
+    min-height: 48px;
+}
+div.post-footer {
+    text-align: right;
+}
+div.pagination {
+    width: 100%;
+    text-align: right;
+    padding: 0px;
+    margin: 0px;
+}
+
+.post-body h1 {
+    font-size: 140%;
+}
+.post-body h2 {
+    font-size: 130%;
+}
+.post-body h3 {
+    font-size: 120%;
+}
+
+div.flask-pagedown-preview {
+    margin: 10px 0px 10px 0px;
+    border: 1px solid #e0e0e0;
+    padding: 4px;
+}
+
+div.flask-pagedown-preview h1 {
+    font-size: 140%;
+}
+div.flask-pagedown-preview h2 {
+    font-size: 130%;
+}
+div.flask-pagedown-preview h3 {
+    font-size: 120%;
+}
+
+
+div.flask-pagedown-preview {
+  /* min-width: 200px; */
+  /* max-width: 760px; */
+  margin: 10px 0px 10px 0px;
+  padding: 6px 12px;
+
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  color: #333;
+  overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  word-wrap: break-word;
+}
+
+div.flask-pagedown-preview a {
+  background: transparent;
+}
+
+div.flask-pagedown-preview a:active,
+div.flask-pagedown-preview a:hover {
+  outline: 0;
+}
+
+div.flask-pagedown-preview strong {
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+div.flask-pagedown-preview img {
+  border: 0;
+}
+
+div.flask-pagedown-preview hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+
+div.flask-pagedown-preview pre {
+  overflow: auto;
+}
+
+div.flask-pagedown-preview code,
+div.flask-pagedown-preview kbd,
+div.flask-pagedown-preview pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+div.flask-pagedown-preview input {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+div.flask-pagedown-preview html input[disabled] {
+  cursor: default;
+}
+
+div.flask-pagedown-preview input {
+  line-height: normal;
+}
+
+div.flask-pagedown-preview input[type="checkbox"] {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+}
+
+div.flask-pagedown-preview table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+div.flask-pagedown-preview td,
+div.flask-pagedown-preview th {
+  padding: 0;
+}
+
+div.flask-pagedown-preview * {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+div.flask-pagedown-preview input {
+  font: 13px/1.4 Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+div.flask-pagedown-preview a {
+  color: #4183c4;
+  text-decoration: none;
+}
+
+div.flask-pagedown-preview a:hover,
+div.flask-pagedown-preview a:focus,
+div.flask-pagedown-preview a:active {
+  text-decoration: underline;
+}
+
+div.flask-pagedown-preview hr {
+  height: 0;
+  margin: 15px 0;
+  overflow: hidden;
+  background: transparent;
+  border: 0;
+  border-bottom: 1px solid #ddd;
+}
+
+div.flask-pagedown-preview hr:before {
+  display: table;
+  content: "";
+}
+
+div.flask-pagedown-preview hr:after {
+  display: table;
+  clear: both;
+  content: "";
+}
+
+div.flask-pagedown-preview h1,
+div.flask-pagedown-preview h2,
+div.flask-pagedown-preview h3,
+div.flask-pagedown-preview h4,
+div.flask-pagedown-preview h5,
+div.flask-pagedown-preview h6 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  line-height: 1.1;
+}
+
+div.flask-pagedown-preview h1 {
+  font-size: 30px;
+}
+
+div.flask-pagedown-preview h2 {
+  font-size: 21px;
+}
+
+div.flask-pagedown-preview h3 {
+  font-size: 16px;
+}
+
+div.flask-pagedown-preview h4 {
+  font-size: 14px;
+}
+
+div.flask-pagedown-preview h5 {
+  font-size: 12px;
+}
+
+div.flask-pagedown-preview h6 {
+  font-size: 11px;
+}
+
+div.flask-pagedown-preview blockquote {
+  margin: 0;
+}
+
+div.flask-pagedown-preview ul,
+div.flask-pagedown-preview ol {
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+div.flask-pagedown-preview ol ol,
+div.flask-pagedown-preview ul ol {
+  list-style-type: lower-roman;
+}
+
+div.flask-pagedown-preview ul ul ol,
+div.flask-pagedown-preview ul ol ol,
+div.flask-pagedown-preview ol ul ol,
+div.flask-pagedown-preview ol ol ol {
+  list-style-type: lower-alpha;
+}
+
+div.flask-pagedown-preview dd {
+  margin-left: 0;
+}
+
+div.flask-pagedown-preview code {
+  font: 12px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
+
+div.flask-pagedown-preview pre {
+  margin-top: 0;
+  margin-bottom: 0;
+  font: 12px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
+
+div.flask-pagedown-preview kbd {
+  background-color: #e7e7e7;
+  background-image: -webkit-linear-gradient(#fefefe, #e7e7e7);
+  background-image: linear-gradient(#fefefe, #e7e7e7);
+  background-repeat: repeat-x;
+  border-radius: 2px;
+  border: 1px solid #cfcfcf;
+  color: #000;
+  padding: 3px 5px;
+  line-height: 10px;
+  font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  display: inline-block;
+}
+
+div.flask-pagedown-preview>*:first-child {
+  margin-top: 0 !important;
+}
+
+div.flask-pagedown-preview>*:last-child {
+  margin-bottom: 0 !important;
+}
+
+div.flask-pagedown-preview .anchor {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  padding-right: 6px;
+  padding-left: 30px;
+  margin-left: -30px;
+}
+
+div.flask-pagedown-preview .anchor:focus {
+  outline: none;
+}
+
+div.flask-pagedown-preview h1,
+div.flask-pagedown-preview h2,
+div.flask-pagedown-preview h3,
+div.flask-pagedown-preview h4,
+div.flask-pagedown-preview h5,
+div.flask-pagedown-preview h6 {
+  position: relative;
+  margin-top: 1em;
+  margin-bottom: 16px;
+  font-weight: bold;
+  line-height: 1.4;
+}
+
+div.flask-pagedown-preview h1 .octicon-link,
+div.flask-pagedown-preview h2 .octicon-link,
+div.flask-pagedown-preview h3 .octicon-link,
+div.flask-pagedown-preview h4 .octicon-link,
+div.flask-pagedown-preview h5 .octicon-link,
+div.flask-pagedown-preview h6 .octicon-link {
+  display: none;
+  color: #000;
+  vertical-align: middle;
+}
+
+div.flask-pagedown-preview h1:hover .anchor,
+div.flask-pagedown-preview h2:hover .anchor,
+div.flask-pagedown-preview h3:hover .anchor,
+div.flask-pagedown-preview h4:hover .anchor,
+div.flask-pagedown-preview h5:hover .anchor,
+div.flask-pagedown-preview h6:hover .anchor {
+  height: 1em;
+  padding-left: 8px;
+  margin-left: -30px;
+  line-height: 1;
+  text-decoration: none;
+}
+
+div.flask-pagedown-preview h1:hover .anchor .octicon-link,
+div.flask-pagedown-preview h2:hover .anchor .octicon-link,
+div.flask-pagedown-preview h3:hover .anchor .octicon-link,
+div.flask-pagedown-preview h4:hover .anchor .octicon-link,
+div.flask-pagedown-preview h5:hover .anchor .octicon-link,
+div.flask-pagedown-preview h6:hover .anchor .octicon-link {
+  display: inline-block;
+}
+
+div.flask-pagedown-preview h1 {
+  padding-bottom: 0.3em;
+  font-size: 2.25em;
+  line-height: 1.2;
+  border-bottom: 1px solid #eee;
+}
+
+div.flask-pagedown-preview h2 {
+  padding-bottom: 0.3em;
+  font-size: 1.75em;
+  line-height: 1.225;
+  border-bottom: 1px solid #eee;
+}
+
+div.flask-pagedown-preview h3 {
+  font-size: 1.5em;
+  line-height: 1.43;
+}
+
+div.flask-pagedown-preview h4 {
+  font-size: 1.25em;
+}
+
+div.flask-pagedown-preview h5 {
+  font-size: 1em;
+}
+
+div.flask-pagedown-preview h6 {
+  font-size: 1em;
+  color: #777;
+}
+
+div.flask-pagedown-preview p,
+div.flask-pagedown-preview blockquote,
+div.flask-pagedown-preview ul,
+div.flask-pagedown-preview ol,
+div.flask-pagedown-preview dl,
+div.flask-pagedown-preview table,
+div.flask-pagedown-preview pre {
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+div.flask-pagedown-preview hr {
+  height: 4px;
+  padding: 0;
+  margin: 16px 0;
+  background-color: #e7e7e7;
+  border: 0 none;
+}
+
+div.flask-pagedown-preview ul,
+div.flask-pagedown-preview ol {
+  padding-left: 2em;
+}
+
+div.flask-pagedown-preview ul ul,
+div.flask-pagedown-preview ul ol,
+div.flask-pagedown-preview ol ol,
+div.flask-pagedown-preview ol ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+div.flask-pagedown-preview li>p {
+  margin-top: 16px;
+}
+
+div.flask-pagedown-preview dl {
+  padding: 0;
+}
+
+div.flask-pagedown-preview dl dt {
+  padding: 0;
+  margin-top: 16px;
+  font-size: 1em;
+  font-style: italic;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview dl dd {
+  padding: 0 16px;
+  margin-bottom: 16px;
+}
+
+div.flask-pagedown-preview blockquote {
+  padding: 0 15px;
+  color: #777;
+  border-left: 4px solid #ddd;
+}
+
+div.flask-pagedown-preview blockquote>:first-child {
+  margin-top: 0;
+}
+
+div.flask-pagedown-preview blockquote>:last-child {
+  margin-bottom: 0;
+}
+
+div.flask-pagedown-preview table {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: normal;
+  word-break: keep-all;
+}
+
+div.flask-pagedown-preview table th {
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview table th,
+div.flask-pagedown-preview table td {
+  padding: 6px 13px;
+  border: 1px solid #ddd;
+}
+
+div.flask-pagedown-preview table tr {
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+}
+
+div.flask-pagedown-preview table tr:nth-child(2n) {
+  background-color: #f8f8f8;
+}
+
+div.flask-pagedown-preview img {
+  max-width: 100%;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+div.flask-pagedown-preview code {
+  padding: 0;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(0,0,0,0.04);
+  border-radius: 3px;
+}
+
+div.flask-pagedown-preview code:before,
+div.flask-pagedown-preview code:after {
+  letter-spacing: -0.2em;
+  content: "\00a0";
+}
+
+div.flask-pagedown-preview pre>code {
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+  word-break: normal;
+  white-space: pre;
+  background: transparent;
+  border: 0;
+}
+
+div.flask-pagedown-preview .highlight {
+  margin-bottom: 16px;
+}
+
+div.flask-pagedown-preview .highlight pre,
+div.flask-pagedown-preview pre {
+  padding: 16px;
+  overflow: auto;
+  font-size: 85%;
+  line-height: 1.45;
+  background-color: #f7f7f7;
+  border-radius: 3px;
+}
+
+div.flask-pagedown-preview .highlight pre {
+  margin-bottom: 0;
+  word-break: normal;
+}
+
+div.flask-pagedown-preview pre {
+  word-wrap: normal;
+}
+
+div.flask-pagedown-preview pre code {
+  display: inline;
+  max-width: initial;
+  padding: 0;
+  margin: 0;
+  overflow: initial;
+  line-height: inherit;
+  word-wrap: normal;
+  background-color: transparent;
+  border: 0;
+}
+
+div.flask-pagedown-preview pre code:before,
+div.flask-pagedown-preview pre code:after {
+  content: normal;
+}
+
+div.flask-pagedown-preview .highlight {
+  background: #fff;
+}
+
+div.flask-pagedown-preview .highlight .mf,
+div.flask-pagedown-preview .highlight .mh,
+div.flask-pagedown-preview .highlight .mi,
+div.flask-pagedown-preview .highlight .mo,
+div.flask-pagedown-preview .highlight .il,
+div.flask-pagedown-preview .highlight .m {
+  color: #945277;
+}
+
+div.flask-pagedown-preview .highlight .s,
+div.flask-pagedown-preview .highlight .sb,
+div.flask-pagedown-preview .highlight .sc,
+div.flask-pagedown-preview .highlight .sd,
+div.flask-pagedown-preview .highlight .s2,
+div.flask-pagedown-preview .highlight .se,
+div.flask-pagedown-preview .highlight .sh,
+div.flask-pagedown-preview .highlight .si,
+div.flask-pagedown-preview .highlight .sx,
+div.flask-pagedown-preview .highlight .s1 {
+  color: #df5000;
+}
+
+div.flask-pagedown-preview .highlight .kc,
+div.flask-pagedown-preview .highlight .kd,
+div.flask-pagedown-preview .highlight .kn,
+div.flask-pagedown-preview .highlight .kp,
+div.flask-pagedown-preview .highlight .kr,
+div.flask-pagedown-preview .highlight .kt,
+div.flask-pagedown-preview .highlight .k,
+div.flask-pagedown-preview .highlight .o {
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .kt {
+  color: #458;
+}
+
+div.flask-pagedown-preview .highlight .c,
+div.flask-pagedown-preview .highlight .cm,
+div.flask-pagedown-preview .highlight .c1 {
+  color: #998;
+  font-style: italic;
+}
+
+div.flask-pagedown-preview .highlight .cp,
+div.flask-pagedown-preview .highlight .cs {
+  color: #999;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .cs {
+  font-style: italic;
+}
+
+div.flask-pagedown-preview .highlight .n {
+  color: #333;
+}
+
+div.flask-pagedown-preview .highlight .na,
+div.flask-pagedown-preview .highlight .nv,
+div.flask-pagedown-preview .highlight .vc,
+div.flask-pagedown-preview .highlight .vg,
+div.flask-pagedown-preview .highlight .vi {
+  color: #008080;
+}
+
+div.flask-pagedown-preview .highlight .nb {
+  color: #0086B3;
+}
+
+div.flask-pagedown-preview .highlight .nc {
+  color: #458;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .no {
+  color: #094e99;
+}
+
+div.flask-pagedown-preview .highlight .ni {
+  color: #800080;
+}
+
+div.flask-pagedown-preview .highlight .ne {
+  color: #990000;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .nf {
+  color: #945277;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .nn {
+  color: #555;
+}
+
+div.flask-pagedown-preview .highlight .nt {
+  color: #000080;
+}
+
+div.flask-pagedown-preview .highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+
+div.flask-pagedown-preview .highlight .gd {
+  color: #000;
+  background-color: #fdd;
+}
+
+div.flask-pagedown-preview .highlight .gd .x {
+  color: #000;
+  background-color: #faa;
+}
+
+div.flask-pagedown-preview .highlight .ge {
+  font-style: italic;
+}
+
+div.flask-pagedown-preview .highlight .gr {
+  color: #aa0000;
+}
+
+div.flask-pagedown-preview .highlight .gh {
+  color: #999;
+}
+
+div.flask-pagedown-preview .highlight .gi {
+  color: #000;
+  background-color: #dfd;
+}
+
+div.flask-pagedown-preview .highlight .gi .x {
+  color: #000;
+  background-color: #afa;
+}
+
+div.flask-pagedown-preview .highlight .go {
+  color: #888;
+}
+
+div.flask-pagedown-preview .highlight .gp {
+  color: #555;
+}
+
+div.flask-pagedown-preview .highlight .gs {
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .gu {
+  color: #800080;
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .gt {
+  color: #aa0000;
+}
+
+div.flask-pagedown-preview .highlight .ow {
+  font-weight: bold;
+}
+
+div.flask-pagedown-preview .highlight .w {
+  color: #bbb;
+}
+
+div.flask-pagedown-preview .highlight .sr {
+  color: #017936;
+}
+
+div.flask-pagedown-preview .highlight .ss {
+  color: #8b467f;
+}
+
+div.flask-pagedown-preview .highlight .bp {
+  color: #999;
+}
+
+div.flask-pagedown-preview .highlight .gc {
+  color: #999;
+  background-color: #EAF2F5;
+}
+
+div.flask-pagedown-preview .octicon {
+  font: normal normal 16px octicons-anchor;
+  line-height: 1;
+  display: inline-block;
+  text-decoration: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+div.flask-pagedown-preview .octicon-link:before {
+  content: '\f05c';
+}
+
+div.flask-pagedown-preview .task-list-item {
+  list-style-type: none;
+}
+
+div.flask-pagedown-preview .task-list-item+.task-list-item {
+  margin-top: 3px;
+}
+
+div.flask-pagedown-preview .task-list-item input {
+  float: left;
+  margin: 0.3em 0 0.25em -1.6em;
+  vertical-align: middle;
+}
