--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,14 +34,16 @@ href="{{ url_for('static', filename='styles.css') }}">
                         Home
                     </a>
                 </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 <li>
                     <a href="{{ url_for('main.user', username=current_user.username) }}">
                         Profile
                     </a>
                 </li>
+                {% endif %}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
                 <li class="dropdown">
 
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
