--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import "_macros.html" as macros %}
 
 {% block title %}XueYan's Blog{% endblock %}
 
@@ -41,6 +42,8 @@
             Last seen {{ moment(user.last_seen).fromNow() }}.
         </p>
 
+        <p>{{ user.posts.count() }} blog posts.</p>
+
         <p>
             {% if user == current_user %}
             <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">
@@ -57,4 +60,11 @@
         </p>
     </div>
 </div>
+<h3>Posts by {{ user.username }}</h3>
+{% include '_posts.html' %}
+{% if pagination %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+</div>
+{% endif %}
 {% endblock %}
