change from blog to flashcard

--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}XueYan's Blog - Confirm your account{% endblock %}
+{% block title %}XueYan's FlashCard - Confirm your account{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
