--- a/app/templates/mail/question.html
+++ b/app/templates/mail/question.html
@@ -1,4 +1,4 @@
-{% block title %}XueYan's Blog - Question{% endblock %}
+{% block title %}XueYan's FlashCard - Question{% endblock %}
 
 {% block page_content %}
 <div>
