--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}XueYan's Blog - Post{% endblock %}
+{% block title %}XueYan's FlashCard - Post{% endblock %}
 
 {% block page_content %}
 {% include '_posts.html' %}
