--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}XueYan's Blog{% endblock %}
+{% block title %}XueYan's FlashCard{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
