--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}XueYan's Blog - Forbidden{% endblock %}
+{% block title %}XueYan's FlashCard - Forbidden{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
