--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}XueYan's Blog - Internal Server Error{% endblock %}
+{% block title %}XueYan's FlashCard - Internal Server Error{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
