--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}XueYan's Blog - Change Email Address{% endblock %}
+{% block title %}XueYan's FlashCard - Change Email Address{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
