--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}XueYan's Blog - Change Password{% endblock %}
+{% block title %}XueYan's FlashCard - Change Password{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
