--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -7,4 +7,4 @@
 <p>If you have not requested a password reset simply ignore this message.</p>
 <p>Sincerely,</p>
 <p>Xue Yan</p>
-<p><smaill>Note: replies to this email address are not monitored.</small></p>
+<p><small>Note: replies to this email address are not monitored.</small></p>
