--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}XueYan's Blog - Password Reset{% endblock %}
+{% block title %}XueYan's FlashCard - Password Reset{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
