--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}XueYan's Blog - Edit Profile{% endblock %}
+{% block title %}XueYan's FlashCard - Edit Profile{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
