--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}XueYan's Blog{% endblock %}
+{% block title %}XueYan's FlashCard{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
